# PrimeWallRemover

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  WallRemover.vcxproj  area_collision.cpp  area_collision.hpp  main.cpp  remove_walls.bat  utility.cpp  utility.hpp
src/: Common.cpp  Common.hpp  WallRemover.cpp  WallRemover.hpp  main.cpp  main.rs  shapes.rs
src/prime_files/: MREA.hpp  PAK.cpp  PAK.hpp
